# alpaca

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: INDICATORS.md
src/market_data/: client.py  indicators.py  pipeline.py
tests/: test_client.py  test_indicators.py  test_pipeline.py
